[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "scrambly-boi-py"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
flask = "^1.1"
python = "^3.8"
pytwistyscrambler = "^1.2"
kociemba = "^1.2.1"
"discord.py" = "^1.3.4"
[tool.poetry.dev-dependencies]
